[workspace]
members = ["selene", "selene-lib"]
resolver = "2"

[workspace.package]
version = "0.30.1"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
edition = "2021"
homepage = "https://kampfkarren.github.io/selene/"
license = "MPL-2.0"
repository = "https://github.com/Kampfkarren/selene"

[workspace.dependencies]
full_moon = "2.1.1"
toml = "0.7.2"

# Do not update this without confirming profiling uses the same version of tracy-client as selene
profiling = "1.0.7"

[patch.crates-io]
getrandom = { git = "https://github.com/rust-random/getrandom", tag = "v0.2.15" }
